tests-build/tests/fail/net_without_udp_missing_udp.rs
use build_tests::tokio_net::udp;

fn main() {}

